--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,10 +23,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  moor: 2.3.0
+  moor_ffi: 0.4.0
+  path_provider:
+  path:
+  toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  moor_generator: 2.3.1
+  build_runner:
 
 
 # For information on the generic Dart part of this file, see the
